small spacing & bug fixes

--- a/_components/less/_sbnstyle.less
+++ b/_components/less/_sbnstyle.less
@@ -258,13 +258,14 @@ footer {
 
 }
 
+@media (min-width: 480px) and (max-width: 991px){
+  .break-early {
+    width:400px;
+  }
+}
 
 
 @media (min-width: 480px) and (max-width: 991px),(max-width: 480px) {
-
-.break-early{
-  width:400px;
-}
 
  .box-header .col-md-12 {
   margin-left: auto;
